--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
 } */
 
 :root {
+  --darkk: #1D2B5A;
   --bluedark: #030315;
   --yellow: #F7D33C;
   --pinkred: #fd496a;
@@ -40,27 +41,27 @@
 /* REUSABLES */
 
 /* gradient button */
-.galaxy Button, .milkynav Button, .dash-btn1 {
+.galaxy Button, .dash-btn1, .milkynav Button {
   border: none;
   background-image: linear-gradient(to right, var(--yellow), var(--pinkred));
   color : white;
-  box-shadow: 1px 2px 8px 1px rgb(92, 93, 95);
+  box-shadow: 1px 2px 8px 1px rgba(0 , 0, 0, 0.5);
 } 
 
 /* clickable */
-.galaxy Button, .App-header Button, .dash-btn, a.social {
+Button, a.social, .milky-navlink, #navbrand {
   margin-right: 15px;
   transition: transform 250ms;
   display: inline-block;
 }
 
-.galaxy Button:hover, .App-header Button:hover, .dash-btn:hover, a.social:hover {
+Button:hover, a.social:hover, .milky-navlink:hover, #navbrand:hover {
   transform: translateY(-2px);
 }
 
 
 /* centered */
-.App-header p, .dash-contain, info{
+.App-header p, .dash-contain, .galaxy-back{
   margin : 0 auto;
 }
 
@@ -69,8 +70,8 @@
 /*HEADER*/
 
 .App-header {
-  background-color: var(--bluedark);
-  background-blend-mode:darken;
+  /* background-color: var(--bluedark); */
+  background-color: black;  
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -80,8 +81,45 @@
   color: white;
 }
 
+/* NAVBAR */
+.milkynav {
+  width: 100%;
+  margin: 0 auto;
+  background-image: url("./resources/images/back1.png");
+  background-repeat: no-repeat;
+  }
+
+.milkynav Button {
+  border: none;
+  background-image: linear-gradient(to right, var(--yellow), var(--pinkred));
+  color : white;
+  box-shadow: 1px 2px 8px 1px rgba(0 , 0, 0, 0.5);
+
+  border-radius: 18px;
+  margin : 7px;
+  font-size: large;
+  padding: 8px 18px;
+}
+
+.milky-navlink {
+  margin-left: auto;
+  margin-right: 30px;
+  color: white;
+  text-decoration: none;
+  font-size: large;
+}
+
+.milky-navlink:hover {
+  color:white;
+}
 
 /* FOOTER */
+
+/* background-image: url("./resources/images/back2.png");
+overflow: visible;
+background-repeat: no-repeat;
+background-size: contain;
+background-size:cover; */
 
 .footer-list ul {
   padding: 0;
@@ -102,18 +140,25 @@
 /* DASH */
 
 .dash-div {
+  /* background-color: black; */
+
   background-image: url("./resources/images/back1.png");
   background-repeat: no-repeat;
   background-size:cover;
   margin: -75px 0 0 0;
 
-  height: 850px;
+  /* box-shadow: 0 -20px rgb(0, 0, 15) inset, 0 -40px rgb(0, 10, 16) inset, 0 -60px rgb(1, 1, 20) inset, 0 -80px rgb(2, 2, 21) inset; */
+  /* box-shadow: inset 0px -23px 40px 25px white;     */
+  /* box-shadow: 0px -20px 60px 10px transparent inset; */
+
+
+
+  min-height: 850px;
 }
 
 .dash-btn {
   border-radius: 18px;
   margin : 7px;
-  box-shadow: 1px 2px 8px 1px rgb(92, 93, 95);
   font-size: 12px;
   padding: 8px 18px;
 
@@ -122,6 +167,9 @@
   background-image: none;
   background-color:white;
   color: black;
+  border: none;
+  box-shadow: 1px 2px 8px 1px rgb(92, 93, 95);
+
 }
 
 .dash-circ {
@@ -142,29 +190,98 @@
 
 /* GALAXY */
 
+
+.galaxy.div{
+  display: block;
+  z-index: 5;
+  position: relative;
+
+  margin-right: auto;
+  margin-left:auto;
+  margin-top: 20px;
+  width: 200px;
+  height: 200px;
+  position: relative;
+}
+
+
 .galaxy {
+  display: block;
+  z-index: 5;
+  position: relative;
+
+  margin-top: -950px;
+
+  width: 100%;
+  height: 100%;
+  color: #fff;
+  text-shadow: 0 0 3px #000;
+  text-align: center;
+  font-size: 30px;
+
+  /* box-shadow: 0 0 20px 20px black  ; */
+  /* background-blend-mode: difference; */
+  min-height:max-content;
+  padding-bottom: 120px;
+}
+
+.dimmer {
+  margin-top: 0px;  
+  /* padding-top: -80px; */
+    /* background-color: black; */
+    width: 100%;
+    
+    /* position:absolute; */
+    top:0;
+    left:0;
+    height: 990px;
+    -webkit-filter: blur(20px);
+-moz-filter: blur(20px);
+-o-filter: blur(20px);
+-ms-filter: blur(20px);
+filter: blur(20px);
+
+  /* -webkit-mask-image: linear-gradient(to top, black 90%, transparent 100%);
+  mask-image: linear-gradient(to top, black 90%, transparent 100%); */
+
+}
+
+.galaxy-back {
+  margin-top: -990px;
+
+
   background-image: url("./resources/images/galaxy.png");
   background-repeat: no-repeat;
-  
-  -moz-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-  -webkit-box-shadow: 1px 2px 3px rgba(0,0,0,.5);
-    box-shadow: 1px 2px 3px rgba(0,0,0,.5);
+  background-size:constain;
+  opacity: 0.73;
+  background-size:auto;
+  background-position-x: center;
+  background-position-y: -30%;
+  width: 50%;
+  height: 990px;
+
+  /* position:absolute; */
+  /* top:0;
+  left:0; */
+  /* width: 100%; */
+  /* height:100%; */
 }
 
 .galaxy-circle {
-  padding-top : 15px;
+  padding : 29px;
   background-color: var(--purp1);
-  height: 160px;
-  width : 160px;
-  border-radius: 90px;
+
+  height: 202px;
+  width : 202px;
+  border-radius: 101px;
 }
-.galaxy-circle h3 {
+.galaxy-circle h5 {
   color: var(--purp3);
 
 }
 
 .galaxy-circle p{
-  font-size: 10px;
+  font-size: 12px;
 }
 
 .galaxy-circle Button {
@@ -172,7 +289,7 @@
   padding: 5px 13px;
   border-radius: 15px;
 
-  margin : 7px;
+  margin : 38px;
   padding: 8px 18px;
 }
 
@@ -230,8 +347,19 @@ div.milkyway-icon {
 
 /* PARTNERS */
 
+.partners-div {
+  padding-top: 50px;
+
+  /* background-color: black; */
+
+
+  margin: 0px 0 0 0;
+
+  /* box-shadow: 0 -20px rgb(0, 0, 15) inset, 0 -40px rgb(0, 10, 16) inset, 0 -60px rgb(1, 1, 20) inset, 0 -80px rgb(2, 2, 21) inset; */
+}
+
 .partners-circ {
-  padding-top : 15px;
+  padding-top : px;
   margin: 0 auto;
   /* background-color: var(--purp1); */
   height: 100px;
