--- a/src/components/PoolItem.module.css
+++ b/src/components/PoolItem.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   box-sizing: border-box;
   margin-top: 30px;
+  font-family: "DM Sans";
 }
 
 .poolItemMain {
@@ -9,8 +10,6 @@
   align-items: center;
   justify-content: space-evenly;
   cursor: pointer;
-  background-color: white;
-  border: 2px solid rgb(202, 202, 202);
   border-radius: 20px;
   padding: 14px 26px;
 }
@@ -21,21 +20,50 @@
   column-gap: 10px;
   align-items: center;
   flex-basis: 25%;
-  min-width: 121px;
+  min-width: 131px;
 }
 
 .ticker {
   font-size: 24px;
   line-height: 28px;
   font-weight: 700;
-  color: #1e76fc;
+  color: white;
 }
 
 .name {
   font-size: 20px;
   line-height: 24px;
   font-weight: 600;
-  color: #778291;
+  color: white;
+  opacity: 0.5;
+  margin-top: 15px;
+}
+
+.rewardsSection {
+  padding: 14px 10px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  flex-basis: 30%;
+  min-width: 55px;
+}
+
+.rewardsContainer {
+  text-align: left;
+}
+
+.rewardsTitle {
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;
+  color: white;
+}
+
+.rewards {
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 600;
+  color: white;
 }
 
 .apySection {
@@ -55,14 +83,14 @@
   font-size: 16px;
   line-height: 20px;
   font-weight: 600;
-  color: #7d939e;
+  color: white;
 }
 
 .apy {
   font-size: 18px;
   line-height: 22px;
   font-weight: 600;
-  color: #263238;
+  color: white;
 }
 
 .stakedSection {
@@ -82,14 +110,14 @@
   font-size: 16px;
   line-height: 20px;
   font-weight: 600;
-  color: #7d939e;
+  color: white;
 }
 
 .stake {
   font-size: 18px;
   line-height: 22px;
   font-weight: 600;
-  color: #263238;
+  color: white;
 }
 
 .moreSection {
@@ -98,7 +126,6 @@
   align-items: center;
   justify-content: flex-end;
   flex-basis: 20%;
-  min-width: 20px;
 }
 
 .moreContainer {
@@ -110,7 +137,7 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 600;
-  color: #3e8cb9;
+  color: white;
 }
 
 .poolItemExtra {
@@ -118,9 +145,6 @@
   align-items: center;
   justify-content: space-evenly;
   column-gap: 5px;
-  background-color: white;
-  border: 2px solid #c9c9c9;
-  border-top: 0px;
   border-radius: 0px 0px 20px 20px;
   padding: 14px 26px;
 }
@@ -139,7 +163,7 @@
   font-size: 18px;
   line-height: 22px;
   font-weight: 600;
-  color: #7d939e;
+  color: color;
   margin-left: 10px;
 }
 
@@ -151,10 +175,9 @@
 }
 
 .depositButton {
-  border: 1px solid #536b77;
-  background-color: #1e90ff;
-  box-shadow: 0px 2px 2px #4c626d;
-  border-radius: 10px;
+  background-color: #6a1787;
+  border-radius: 15px;
+  border: none;
   cursor: pointer;
   width: 120px;
   height: 35px;
@@ -163,14 +186,13 @@
   color: white;
   align-self: center;
 }
-
 .depositButton:hover {
-  background-color: #4ba5ff;
+  background-color: #dd38f2;
 }
-
-.depositButton:active {
-  box-shadow: inset -1px -1px 2px rgba(255, 255, 255, 0.6),
-    inset 1px 1px 2px rgba(0, 0, 0, 0.6);
+.depositButton:disabled {
+  cursor: default;
+  color: grey;
+  background-color: #6a1787 !important;
 }
 
 .withdrawSection {
@@ -200,6 +222,6 @@
   height: 40px;
   font-size: 16px;
   font-weight: 600;
-  color: #263238;
+  color: white;
   align-self: center;
 }
