--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .test {
@@ -162,6 +164,7 @@ background-size:cover; */
   /* box-shadow: 0px -20px 60px 10px transparent inset; */
 
   min-height: 850px;
+  padding-bottom: 100px;
 }
 
 .dash-btn {
@@ -186,6 +189,8 @@ background-size:cover; */
   padding-top: 50px;
   /* display: flex; */
   align-items: center;
+  margin: auto;
+  margin-bottom: 50px;
 }
 
 .dash-circ p {
@@ -229,6 +234,18 @@ background-size:cover; */
   padding-bottom: 120px;
 }
 
+@media only screen and (max-width: 965px) {
+  .galaxy {
+    width: 100%;
+    height: fit-content;
+    padding: 0;
+  }
+  .galaxy-circle {
+    margin: auto !important;
+    margin-top: 70px !important;
+  }
+}
+
 .dimmer {
   margin-top: -90px;
 
@@ -255,12 +272,11 @@ background-size:cover; */
 
   background-image: url("./resources/images/galaxy.png");
   background-repeat: no-repeat;
-  background-size: constain;
   opacity: 0.73;
-  background-size: auto;
+  background-size: contain;
   background-position-x: center;
-  background-position-y: -30%;
-  width: 55%;
+  background-position-y: center;
+  width: 100%;
   height: 990px;
 
   /* position:absolute; */
@@ -306,11 +322,12 @@ background-size:cover; */
   background-repeat: no-repeat;
   background-size: cover;
 
-  height: 1000px;
+  min-height: 1000px;
 }
 
 .community-div h2 {
   display: block;
+  padding-bottom: 30px;
 }
 
 .community-circ {
@@ -322,11 +339,13 @@ background-size:cover; */
   /* display: flex; */
   align-items: center;
   margin: 0 auto;
+  margin-bottom: 50px;
 }
 
 .community-circ p {
-  font-size: 10px;
+  font-size: 14px;
   color: var(--purp3);
+  margin-top: -30px;
 }
 
 .community-circ h2 {
@@ -366,7 +385,7 @@ div.milkyway-icon {
 
   /* background-color: black; */
 
-  margin: -700px 0 0 0;
+  margin: 0;
 
   /* box-shadow: 0 -20px rgb(0, 0, 15) inset, 0 -40px rgb(0, 10, 16) inset, 0 -60px rgb(1, 1, 20) inset, 0 -80px rgb(2, 2, 21) inset; */
 }
@@ -579,4 +598,40 @@ div.milkyway-icon {
   padding: 5px 15px;
   border-radius: 10px;
   cursor: default;
+}
+
+@media only screen and (max-width: 760px) {
+  .trader-div {
+    width: 90% !important;
+    min-width: 0 !important;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  .trade-from-div {
+    margin-top: 40px;
+  }
+  .footer-app {
+    padding: 20px !important;
+  }
+  .social-container {
+    text-align: right;
+  }
+
+  .headerApp {
+    display: flex;
+    flex-wrap: wrap !important;
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  .farms-div {
+    margin-top: 0;
+  }
+
+  .headerApp > div {
+    width: fit-content;
+    flex-shrink: 0;
+    margin: 10px;
+    margin-top: 0px;
+  }
 }
