--- a/src/components/Trader.module.css
+++ b/src/components/Trader.module.css
@@ -20,6 +20,7 @@
 }
 .tab:hover {
 }
+
 #settingsButton {
   text-align: right;
   padding-right: 20px;
@@ -91,4 +92,21 @@
 .confirmButton:disabled {
   background-color: #4a1062;
   color: grey;
+}
+
+@media only screen and (max-width: 760px) {
+  .amountInput {
+    width: 70% !important;
+    margin-left: 10px;
+  }
+  .selectButton {
+    margin-left: 10px;
+  }
+  .left {
+    margin: 0;
+  }
+  .maxText {
+    text-align: left;
+    padding-left: 20px;
+  }
 }
