--- a/src/components/HeaderApp.module.css
+++ b/src/components/HeaderApp.module.css
@@ -1,18 +1,40 @@
 .navLink {
   text-decoration: none;
   color: white;
-  font-size: 26px;
+  font-size: 18px;
   font-family: "DM Sans";
   transition: 0.3s;
+  margin-left: 80px;
 }
+
 .navLink:hover {
   color: #dd38f2;
 }
 .navbtn {
   background-color: #6a1787;
-  font-size: 20px;
-  padding: 5px 15px;
-  border-radius: 10px;
+  font-size: 18px;
+  padding: 7px 21px;
+  border-radius: 50px;
   cursor: pointer;
   color: white;
+  min-width: 170px;
+  margin-right: 30px;
+  float: right !important;
+}
+
+@media only screen and (max-width: 760px) {
+  .navLink {
+    margin-left: 0;
+  }
+  .navbtn {
+    font-size: 14px;
+    min-width: 150px;
+    margin-right: 20px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .navbtn {
+    margin-top: 40px;
+  }
 }
