Small design changes to home page

--- a/src/views/home/home.module.css
+++ b/src/views/home/home.module.css
@@ -1,10 +1,6 @@
 :root {
   --whiteColor: white;
-  --btnColor: linear-gradient(
-    101deg,
-    rgba(195, 179, 34, 1) 0%,
-    rgba(253, 61, 45, 0.9560866582961309) 100%
-  );
+  --btnColor: linear-gradient(101deg, rgba(195, 179, 34, 1) 0%, rgba(253, 61, 45, 0.9560866582961309) 100%);
   --btnPurple: #421c52;
 }
 
@@ -75,7 +71,6 @@ h4:after {
   text-align: center;
   color: var(--whiteColor);
   font-size: 16px;
-  font-weight: lighter;
   font-family: Open Sans;
 }
 
@@ -94,6 +89,10 @@ h4:after {
   margin: 20px;
   border-radius: 60px;
   border: none;
+}
+
+button {
+  transition: all 0.5s ease;
 }
 
 a {
@@ -133,7 +132,7 @@ a {
   margin-left: 24px;
   align-items: center;
   border-radius: 50%;
-  background-image: linear-gradient(to bottom, #360C47, #261F4B);
+  background-image: linear-gradient(to bottom, #360c47, #261f4b);
 }
 
 .item h3 {
@@ -143,7 +142,7 @@ a {
   /* color: blueviolet; */
   color: #b31ab3;
   font-weight: normal;
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .section2 {
@@ -156,6 +155,7 @@ a {
 
 .heading {
   text-align: center;
+  margin-top: 50px;
 }
 
 .heading h1 {
@@ -203,7 +203,7 @@ a {
   margin: 10px;
   align-items: center;
   border-radius: 50%;
-  background-image: linear-gradient(to bottom, #360C47, #1C1946);
+  background-image: linear-gradient(to bottom, #360c47, #1c1946);
   position: relative;
 }
 
@@ -268,7 +268,7 @@ a {
   justify-content: space-around;
   align-items: center;
   position: relative;
-  /* padding: 50px; */
+  margin-top: 56px;
   padding: 10px;
   flex-wrap: wrap;
 }
@@ -291,7 +291,7 @@ a {
   margin-left: 20px;
   align-items: center;
   border-radius: 50%;
-  background-image: linear-gradient(to bottom, #360C47, #1C1946);
+  background-image: linear-gradient(to bottom, #360c47, #1c1946);
   position: relative;
 }
 
@@ -307,9 +307,10 @@ a {
   justify-content: space-around;
   align-items: center;
   position: relative;
-  /* padding: 50px; */
+  margin-top: 56px;
   padding: 10px;
   flex-wrap: wrap;
+  margin-bottom: 50px;
 }
 
 .grid4__item {
