--- a/src/layout/landing/navbar/navbar.module.css
+++ b/src/layout/landing/navbar/navbar.module.css
@@ -1,11 +1,7 @@
 :root {
   --whiteColor: white;
   --orangeColor: orange;
-  --btnColor: linear-gradient(
-    101deg,
-    rgba(195, 179, 34, 1) 0%,
-    rgba(253, 61, 45, 0.9560866582961309) 100%
-  );
+  --btnColor: linear-gradient(101deg, rgba(195, 179, 34, 1) 0%, rgba(253, 61, 45, 0.9560866582961309) 100%);
 }
 
 .nav {
@@ -24,7 +20,7 @@
   .nav {
     flex-direction: column;
   }
-  
+
   .nav__menu ul {
     justify-content: flex-end;
   }
@@ -34,10 +30,12 @@
   margin-top: -5px;
   list-style: none;
   padding: 5px 24px 0px 0px;
+  transition: all 0.5s ease;
+  margin-right: 15px;
 }
 
 .nav__menu ul li:hover {
-  transform: scale(1.1)
+  transform: scale(1.1);
 }
 
 .nav__menu ul li a {
@@ -47,7 +45,7 @@
   border-radius: 60px;
 }
 
-.nav__menu ul li:nth-child(2) {
+.nav__menu ul li:nth-child(3) {
   background: var(--btnColor);
   color: var(--whiteColor);
   font-weight: normal;
@@ -55,5 +53,5 @@
   padding: 7px 20px;
   border-radius: 60px;
   border: none;
-  margin-left: 10px;
+  margin-right: 0px;
 }
